<resources>
    <string name="app_name">Gestión de Dinero</string>

    <!--BOTTOM NAV-->
    <string name="cuentas">Cuentas</string>
    <string name="categorias">Categorias</string>
    <string name="transacciones">Operaciones</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="ajustes">Ajustes</string>

    <!--LOGIN-->
    <string name="loginUserHint">Email</string>
    <string name="loginPasswordHint">Contraseña</string>
    <string name="loginLogin">Iniciar sesión</string>
    <string name="loginRegister">¿No tienes una cuenta?</string>
    <string name="trans_addTrans">Añadir operación</string>

    <!--SIGN UP-->
    <string name="signupRegister">Crear cuenta</string>
    <string name="signupPasswordRepeat">Repetir Contraseña</string>
    <string name="title_activity_add_cuenta">AddCuenta</string>

    <!--CONTENT DESCRIPTORS-->
    <string name="Check">Confirmar</string>
    <string name="Back_Arrow">Ir atrás</string>
    <string name="add_element">Añadir elemento</string>
    <string name="trans_NuevaTransaccion">NUEVA OPERACIÓN</string>
    <string name="categoria">Categoria</string>
    <string name="cuenta">Cuenta</string>
    <string name="dinero">Dinero</string>
    <string name="fecha">Fecha</string>
    <string name="comentario_opcional">Comentario (opcional)</string>
    <string name="addcta_NuevaCuenta">NUEVA CUENTA</string>
    <string name="addcat_NuevaCategoria">NUEVA CATEGORIA</string>
    <string name="sett_addUser">Añadir usuario</string>
    <string name="sett_addChild">Añadir Hijo</string>
    <string name="friend_addEmail">AÑADIR EMAIL</string>
    <string name="shared_datos_compartidos">Datos compartidos</string>
    <string name="nombre">Nombre</string>
    <string name="dinero_gastado">Dinero gastado</string>
    <string name="budget_mensual">Budget mensual</string>
    <string name="codigo_5nums">Código (5 numeros)</string>
    <string name="control_parental">Control parental</string>
    <string name="tus_datos">Tus datos:</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="logo_app">Logo de aplicación</string>
    <string name="desarrollado_apl">Desarrollado por\nÁgueda Prieto LLamas</string>
    <string name="proy_fin">Proyecto final CFGS DAM</string>
    <string name="repo">Repositorio del proyecto</string>

</resources>