<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal.AboutActivity">

    <ImageButton
        android:id="@+id/supBtnBack"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_margin="15dp"
        android:background="@null"
        android:contentDescription="@string/Back_Arrow"
        android:onClick="back"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/piggy_bank_save_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        app:tint="@android:color/transparent"
        android:contentDescription="@string/logo_app"
        />

    <TextView
        android:id="@+id/about_apl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrollado_apl"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/about_proy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proy_fin"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_apl"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/about_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo"
        android:onClick="goto_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_proy"
        android:layout_marginTop="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>