<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorias.AddCategoriaActivity">

    <LinearLayout
        android:id="@+id/addcat_linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/addcat_backBut"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/arrow_back"
            android:scaleType="fitCenter"
            android:background="@null"
            android:onClick="goto_MainActivity"
            android:contentDescription="@string/Back_Arrow"
            />

        <TextView
            android:id="@+id/addcat_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/addcat_NuevaCategoria" />

        <ImageButton
            android:id="@+id/addcat_confirm"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/check"
            android:scaleType="fitCenter"
            android:background="@null"
            android:onClick="confirm"
            android:contentDescription="@string/Check"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/addcat_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addcat_linlayout"
        android:layout_marginTop="100dp"/>

    <!-- TODO CAMBIAR A ESCOGER ICONO -->
<!--    <EditText-->
<!--        android:id="@+id/addcat_icon"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:hint="Icono"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/addcat_nombre"-->
<!--        android:layout_marginTop="25dp"/>-->

    <EditText
        android:id="@+id/addcat_dinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/dinero_gastado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addcat_nombre"
        android:layout_marginTop="25dp"/>
<!--        app:layout_constraintTop_toBottomOf="@id/addcat_icon"-->

    <EditText
        android:id="@+id/addcat_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/budget_mensual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addcat_dinero"
        android:layout_marginTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>