<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Funcionalidad.AddFriendActivity">

    <LinearLayout
        android:id="@+id/addcat_linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/Back_Arrow">

        <ImageButton
            android:id="@+id/addcat_backBut"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/arrow_back"
            android:scaleType="fitCenter"
            android:background="@null"
            android:onClick="exit"
            android:contentDescription="@string/Back_Arrow"
            />

        <TextView
            android:id="@+id/addcat_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/friend_addEmail" />

        <ImageButton
            android:id="@+id/addcat_confirm"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/check"
            android:scaleType="fitCenter"
            android:background="@null"
            android:onClick="confirm"
            android:contentDescription="@string/Check"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/friend_inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="correo@email.com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addcat_linlayout"
        android:layout_margin="125dp"
        />

    <EditText
        android:id="@+id/friend_inputCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Código (5 numeros)"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/friend_inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/friend_switchIsChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Control parental"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_inputCode"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/friend_userData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tus datos:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_switchIsChild"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/friend_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_userData"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/friend_userCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friend_userEmail"
        android:layout_marginTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>